--- a/operators/simple-demo-operator/ci.yaml
+++ b/operators/simple-demo-operator/ci.yaml
@@ -1,3 +1,2 @@
-cert_project_id: 62a06579791dec2df400bbe4
-preflight-trigger: false
-upload-artifacts: false
+cert_project_id: 62685118f76e7f10aa43e0ad
+merge: false
