--- a/operators/simple-demo-operator/v0.0.7/metadata/annotations.yaml
+++ b/operators/simple-demo-operator/v0.0.7/metadata/annotations.yaml
@@ -1,6 +1,6 @@
 annotations:
   # Pyxis annotations.
-  com.redhat.openshift.versions: v4.10-v4.15
+  com.redhat.openshift.versions: =4.12
 
   # Core bundle annotations.
   operators.operatorframework.io.bundle.mediatype.v1: registry+v1
